# openff-fragmenter

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  oe_license.txt.enc  pyproject.toml  pytest.ini  setup.cfg  setup.py  versioneer.py
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml  ci.yaml  lint.yaml
devtools/: README.md
devtools/conda-envs/: docs.yaml  meta.yaml  test_env.yaml
devtools/conda-recipe/: build.sh  meta.yaml
devtools/scripts/: conda_env.py
docs/: Makefile  README.md  api.rst  conf.py  environment.yml  examples.rst  fragment-molecules.nblink  fragmenter.rst  index.bib  index.rst  installation.rst  intro.rst  make.bat
docs/_static/css/: theme_overrides.css
docs/api/: fragment.rst  index.rst  states.rst
docs/source/: moldules.rst
examples/: .gitignore  example_workflow.json  fragment-molecules.ipynb  fragment_molecules.py
fragmenter/: __init__.py  _version.py  chemi.py  depiction.py  fragment.py  launch.py  states.py  torsion_scan.py  torsions.py  utils.py  workflow_api.py
fragmenter/data/: fgroup_smarts.yml  fgroup_smarts_comb.yml  workflows.json
fragmenter/tests/: conftest.py  test_chemi.py  test_depiction.py  test_fractal.py  test_fragmenter.py  test_launch.py  test_qmscan.py  test_regression.py  test_states.py  test_torsions.py  test_utils.py  test_utilts.py  test_workflow_api.py  utils.py
fragmenter/tests/reference/: CCCC.json  butane.smi  butane.xyz  butane_2.xyz  butane_crankjob.json  ethylmethylidyneamonium.mol2  options.yaml  options2.yaml  toluene.mol2  workflows.json
openff/fragmenter/: __init__.py  _version.py  chemi.py  depiction.py  fragment.py  states.py  utils.py
openff/fragmenter/_tests/: conftest.py  test_chemi.py  test_depiction.py  test_fragmenter.py  test_regression.py  test_states.py  test_utils.py  utils.py
openff/fragmenter/data/: default-functional-groups.json  report-template.html
openff/fragmenter/tests/: conftest.py  test_chemi.py  test_depiction.py  test_fragmenter.py  test_regression.py  test_states.py  test_utils.py  utils.py
